Fixed the footer overlapping issue

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,13 @@
 }
 
 body {
+    background: #000;
+    color: #ffffff;
     max-width: 100%;
     min-height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    position: relative;
     width: 100%;
 
 }
@@ -20,11 +25,9 @@ section {
 a {
     text-decoration: none;
 }
-#container div canvas{
-    display: none; !important;
-}
 .body-wrapper, #info{
     min-height: 100%;
+    margin:0 0 200px;
     height: inherit;
 }
 
@@ -148,8 +151,11 @@ a {
 /*Site Footer*/
 
 #footer {
-    position: absolute;
     bottom: 0;
+    /*height: 200px;*/
+    left: 0;
+    position: absolute;
+    width: 100%;
 }
 
 #facebook_link {
